# encore_drawing_2

./: .env.example  .gitignore  README.md  UPLOAD_TO_RESULTS.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
app/config/: settings.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: batch.py  feedback.py  health.py  match.py  materials.py  training.py
backend/app/config/: settings.py
backend/app/core/models/: schemas.py
backend/app/features/agent/: orchestrator.py
backend/app/features/cache/: redis_cache.py
backend/app/features/classifier/: efficientnet.py  retrain_service.py
backend/app/features/db/: database_service.py  models.py  repository.py  seed.py  session.py
backend/app/features/embeddings/: __init__.py
backend/app/features/feedback/: store.py
backend/app/features/masters/: loader.py
backend/app/features/matching/: json_filler.py  validator.py
backend/app/features/ollama/: client.py
backend/app/features/rag/: retriever.py
backend/app/features/vision/: batch_splitter.py  box_detector.py  profile_comparator.py  sketch_analyzer.py  sketch_preprocessor.py
backend/app/services/: feedback_service.py  match_service.py
backend/data/: materials_colors.json
backend/data/models/: label_index.json
backend/scripts/: backfill_embeddings.py  eval_client_sketches.py  generate_synthetic_sketches.py  make_comparison_grid.py  run_eval.py  train_from_dl.py
docs/: UPLOAD_TO_RESULTS.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: eval_client_sketches.py
(+109 files in other folders)
