[project]
name = "encore-drawing-matcher"
version = "1.0.0"
description = "Agentic RAG backend for matching handwritten flashing sketches to Encore master drawings"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "greenlet>=3.1.0",
]

[tool.uv]
package = false
