[project]
name = "encore-drawing-matcher"
version = "1.0.0"
description = "Agentic RAG backend for matching handwritten flashing sketches to Encore master drawings"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "greenlet>=3.1.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "opencv-python-headless>=4.13.0.92",
    "pymupdf>=1.27.2.3",
]

[tool.uv]
package = false
